syntax = "proto3";

package com.example.domain;

import "akkaserverless/annotations.proto";

option (akkaserverless.file).event_sourced_entity = {
    name: "Country"
    entity_type: "country"
    state: "CountryState"
    events: ["CountryCreated", "CountryImported"]
};


message CountryState {
    string isoCode = 1;
    string name = 3;
}

message CountryCreated {
    CountryState country = 1;
    int64 date = 2;
    string byUserID = 3;
}

message CountryImported {
    CountryState country = 1;
    int64 date = 2;
    string byUserID = 3;
}

message CountryEvent {
    string action = 1;
    string content = 2;
}

message CountryResponse {
    string isoCode = 1;
    string name = 3;
    repeated CountryEvent events = 8;
}


